--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  provider: ^6.1.5+1
+  http: ^1.5.0
+  shared_preferences: ^2.5.3
+  sqflite: ^2.4.2
+  flutter_local_notifications: ^19.4.1
+  flutter_timezone: ^4.1.1
+  timezone: ^0.10.1
+  workmanager:
+   git:
+     url: https://github.com/fluttercommunity/flutter_workmanager.git
+     path: workmanager
+     ref: main
 
 dev_dependencies:
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -45,6 +59,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  mocktail: ^1.0.4
+  mocktail_image_network: ^1.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
