--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_local_notifications: ^19.4.1
   flutter_timezone: ^4.1.1
   timezone: ^0.10.1
+  date_picker_timeline: ^1.2.7 
   workmanager:
     git:
       url: https://github.com/fluttercommunity/flutter_workmanager.git
