added login screen and firebase auth

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,12 @@ ios/Runner.xcworkspace/
 
 *.lock
 !pubspec.lock
+.packages
+
+#Firebase
+# Firebase config files
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
+macos/Runner/GoogleService-Info.plist
+lib/firebase_options.dart
+.firebase/
