--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
       url: https://github.com/fluttercommunity/flutter_workmanager.git
       path: workmanager
       ref: main
+  cloud_firestore: ^6.0.2
+  firebase_core: ^4.1.1
+  firebase_auth: ^6.1.0
+  firebase_app_check: ^0.4.1
 
 dev_dependencies:
   flutter_test:
