--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,9 +42,12 @@ dependencies:
   shared_preferences: ^2.5.3
   sqflite: ^2.4.2
   flutter_local_notifications: ^19.4.1
-  flutter_timezone: ^4.1.1
+  flutter_timezone: ^5.0.0
+  flutter_multi_formatter: ^2.13.10
   timezone: ^0.10.1
   date_picker_timeline: ^1.2.7 
+  firebase_core: ^4.1.1
+  cloud_firestore: ^6.0.2
   workmanager:
     git:
       url: https://github.com/fluttercommunity/flutter_workmanager.git
@@ -62,7 +65,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   mocktail: ^1.0.4
   mocktail_image_network: ^1.2.0
 
