--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
       url: https://github.com/fluttercommunity/flutter_workmanager.git
       path: workmanager
       ref: main
+  firebase_auth: ^6.1.0
+  cloud_firestore: ^6.0.2
 
 dev_dependencies:
   flutter_test:
