--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   date_picker_timeline: ^1.2.7 
   firebase_core: ^4.1.1
   cloud_firestore: ^6.0.2
+  mockito: ^5.5.1
   workmanager:
     git:
       url: https://github.com/fluttercommunity/flutter_workmanager.git
