--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   date_picker_timeline: ^1.2.7
   firebase_auth: ^6.1.0
   cloud_firestore: ^6.0.2
+  firebase_messaging: ^16.0.3
   mockito: ^5.5.1
 
 dev_dependencies:
