--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   image_picker: ^1.2.0
   camera: ^0.11.2
   image_cropper: ^11.0.0
+  dotenv: ^4.2.0
 
 dev_dependencies:
   flutter_test:
