--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   firebase_auth: ^6.1.0
   cloud_firestore: ^6.0.2
   firebase_messaging: ^16.0.3
+  firebase_crashlytics: ^5.0.3
   mockito: ^5.5.1
   image_picker: ^1.2.0
   camera: ^0.11.2
