--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   image_cropper: ^11.0.0
   flutter_dotenv: ^6.0.0
   flutter_lints: ^6.0.0
+  change_app_package_name: ^1.5.0
 
 dev_dependencies:
   flutter_test:
